fixed sidenav overflow issue

--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ body {
 
 .header-side-nav {
   position: absolute;
+  overflow: scroll;
   top: 0;
   left: 0;
   width: 100%;
